infra/sonarqube/sonar/01-sonar-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: sonarqube
    release: sonarqube
  name: sonarqube-sonarqube
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sonarqube
      release: sonarqube
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sonarqube
        release: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:26.4.0.121862-community
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 6144Mi
            requests:
              cpu: 300m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/extensions/plugins/tmp
              name: sonarqube
              subPath: tmp
            - mountPath: /opt/sonarqube/extensions/downloads
              name: sonarqube
              subPath: downloads
            - mountPath: /opt/sonarqube/extensions/plugins
              name: sonarqube
              subPath: plugins
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /tmp/scripts
              name: copy-plugins
            - mountPath: /opt/sonarqube/web
              name: sonarqube
              subPath:  web
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: install_plugins.sh
                path: install_plugins.sh
            name: sonarqube-sonarqube-install-plugins
          name: install-plugins
        - configMap:
            defaultMode: 493
            items:
              - key: copy_plugins.sh
                path: copy_plugins.sh
            name: sonarqube-sonarqube-copy-plugins
          name: copy-plugins
        - name: sonarqube
          persistentVolumeClaim:
            claimName: sonarqube-pvc
        - emptyDir: {}
          name: tmp-dir
