infra/sonarqube/sonar/03-sonar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500M
  name: sonar-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sonarqube.joinhati.com.br
      http:
        paths:
          - backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
            path: /
            pathType: ImplementationSpecific
